# pyeval

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced/decorators/: index.html
advanced/functional/: index.html
advanced/patterns/: index.html
advanced/pipelines/: index.html
advanced/validators/: index.html
api/fairness/: index.html
api/llm/: index.html
api/ml/: index.html
api/nlp/: index.html
api/overview/: index.html
api/rag/: index.html
api/recommender/: index.html
api/speech/: index.html
api/statistical/: index.html
api/visualization/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  getting-started.md  index.md
docs/advanced/: decorators.md  functional.md  patterns.md  pipelines.md  validators.md
docs/api/: fairness.md  llm.md  ml.md  nlp.md  overview.md  rag.md  recommender.md  speech.md  statistical.md  visualization.md
docs/examples/: llm.md  ml.md  nlp.md  quickstart.md  rag.md
examples/: advanced_features_demo.py  basic_usage.py
examples/llm/: index.html
examples/ml/: index.html
examples/nlp/: index.html
examples/quickstart/: index.html
examples/rag/: index.html
getting-started/: index.html
pyeval/: __init__.py  aggregators.py  callbacks.py  decorators.py  evaluator.py  functional.py  patterns.py  pipeline.py  tracking.py  validators.py
pyeval/fairness/: __init__.py
pyeval/llm/: __init__.py
pyeval/ml/: __init__.py
pyeval/nlp/: __init__.py
pyeval/rag/: __init__.py
pyeval/recommender/: __init__.py
pyeval/speech/: __init__.py
pyeval/utils/: __init__.py  data_ops.py  math_ops.py  text_ops.py  viz_ops.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/advanced/decorators/: index.html
site/advanced/functional/: index.html
site/advanced/patterns/: index.html
site/advanced/pipelines/: index.html
site/advanced/validators/: index.html
site/api/fairness/: index.html
site/api/llm/: index.html
site/api/ml/: index.html
site/api/nlp/: index.html
site/api/overview/: index.html
site/api/rag/: index.html
site/api/recommender/: index.html
site/api/speech/: index.html
site/api/statistical/: index.html
site/api/visualization/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/examples/llm/: index.html
site/examples/ml/: index.html
site/examples/nlp/: index.html
site/examples/quickstart/: index.html
site/examples/rag/: index.html
site/getting-started/: index.html
stylesheets/: extra.css
tests/: __init__.py  run_all.py  test_advanced_features.py  test_evaluator.py  test_fairness.py  test_llm.py  test_ml.py  test_new_metrics.py  test_nlp.py  test_rag.py  test_recommender.py  test_speech.py  test_tracking.py  test_utils.py
