[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeval"
version = "1.0.0"
description = "A comprehensive pure Python evaluation framework for ML, NLP, LLM, RAG, Fairness, Speech, and Recommender systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyEval Team"}
]
keywords = [
    "evaluation",
    "metrics",
    "machine-learning",
    "nlp",
    "llm",
    "rag",
    "fairness",
    "speech",
    "recommender",
    "bleu",
    "rouge",
    "wer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []  # No dependencies!

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyeval"
Documentation = "https://github.com/yourusername/pyeval#readme"
Repository = "https://github.com/yourusername/pyeval"
Issues = "https://github.com/yourusername/pyeval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyeval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
