[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeval"
version = "1.0.0"
description = "A comprehensive pure Python evaluation framework for ML, NLP, LLM, RAG, Fairness, Speech, and Recommender systems"
readme = "README.md"
license = "MIT"
authors = [
    {name = "PyEval Team"}
]
keywords = [
    "evaluation",
    "metrics",
    "machine-learning",
    "nlp",
    "llm",
    "rag",
    "fairness",
    "speech",
    "recommender",
    "bleu",
    "rouge",
    "wer"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = []  # No dependencies!

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocs-minify-plugin>=0.7",
]
all = [
    "pyeval[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pyeval"
Documentation = "https://github.com/yourusername/pyeval#readme"
Repository = "https://github.com/yourusername/pyeval"
Issues = "https://github.com/yourusername/pyeval/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyeval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
